# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick_perf_tracer"
version = "1.0.0"
description = "Decodes the perfetto traces super fast"
readme = "README.md"
authors = [{ name = "Vivek Kanna V", email = "behappy.vivek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["perfetto", "performance", "tracer", "android"]
dependencies = [
    "perfetto >= 0.7.0",
    "NumPy >= 1.25.2",
    "Pandas >= 2.1.0",
    "pytz >= 2023.3"
]
requires-python = ">=3"
